--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-winston": "^4.2.0",
     "json": "^11.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
-    "validator": "^13.11.0"
+    "path": "^0.12.7",
+    "validator": "^13.11.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
